# KanjiFilter

./: .gitignore  Cargo.toml  README.md  build.rs
src/: kanji_iter.rs  main.rs
