[package]
name = "kanji_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10.1"

[build-dependencies]
roxmltree = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
